# Voronoi

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  common.cpp  common.h  kdtree.cpp  kdtree.h  readme.org  test_kd.cpp  voronoi.cpp
res/: 02 - HhbdKyP.ppm  04 - 9XNL6ZZ.ppm  05 - CJ9VhIz.ppm  06 - f4FM0Ip.ppm  07 - v2w6WJ7.ppm  08 - hI6cnL6.ppm  10 - HluzRRL.ppm  11 - Q1APqHY.ppm  12 - SscaVLX.ppm  14 - 1t8Enk8.ppm
