CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(VoronoiFun)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
MESSAGE("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


SET(CMAKE_CXX_FLAGS_DEBUG "-Wall -pedantic -Werror ")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -flto")

OPTION(ASAN "Use adresss sanitizer" OFF)
IF (ASAN)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer -g")
ENDIF()

ADD_EXECUTABLE(
	voronoi
	voronoi.cpp
  )


